detaching-member: Don't warn when passing to a function taking iterators

qSort(list.begin(), list.end()) is fine.

BUG: 356755